--- a/package.json
+++ b/package.json
@@ -24,8 +24,6 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0-0",
     "less": "^3.0.4",
-    "less-loader": "^5.0.0",
-    "style-resources-loader": "^1.4.1",
-    "uglifyjs-webpack-plugin": "^2.2.0"
+    "less-loader": "^5.0.0"
   }
 }
