--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "element-plus": "^1.0.2-beta.28",
     "jquery": "^3.5.1",
     "js-base64": "^3.6.0",
     "js-cookie": "^2.2.1",
@@ -29,6 +30,7 @@
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "style-resources-loader": "^1.4.1",
-    "uglifyjs-webpack-plugin": "^2.2.0"
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "vue-cli-plugin-element-plus": "0.0.13"
   }
 }
